<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/loginFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.rlunaalc.rutify.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.rlunaalc.rutify.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.rlunaalc.rutify.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.rlunaalc.rutify.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.rlunaalc.rutify.ui.register.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register" />
    <fragment
        android:id="@+id/historialFragment"
        android:name="com.rlunaalc.rutify.HistorialFragment"
        android:label="fragment_historial"
        tools:layout="@layout/fragment_historial" />
    <fragment
        android:id="@+id/planificarRutaFragment"
        android:name="com.rlunaalc.rutify.PlanificarRutaFragment"
        android:label="fragment_planificar_ruta"
        tools:layout="@layout/fragment_planificar_ruta" />
    <fragment
        android:id="@+id/grupsFragment"
        android:name="com.rlunaalc.rutify.GrupsFragment"
        android:label="fragment_grups"
        tools:layout="@layout/fragment_grups" />
    <fragment
        android:id="@+id/perfilFragment"
        android:name="com.rlunaalc.rutify.PerfilFragment"
        android:label="fragment_perfil"
        tools:layout="@layout/fragment_perfil" />
    <fragment
        android:id="@+id/realizarRuta"
        android:name="com.rlunaalc.rutify.RealizarRuta"
        android:label="fragment_realizar_ruta"
        tools:layout="@layout/fragment_realizar_ruta" />
</navigation>